--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
+BOT_TOKEN = "6869791975:AAGViNVr1-183Mfig4g7D0Fl88hIH5AWBhc"                              # Require restart after changing it while bot running
 OWNER_ID = "5631774748"                               # Require restart after changing it while bot running
 TELEGRAM_API = "23995611"                           # Require restart after changing it while bot running
 TELEGRAM_HASH = "a1b94f10b912c9d732c320f9c73d73dc"                          # Require restart after changing it while bot running
