--- a/config.env
+++ b/config.env
@@ -122,7 +122,7 @@ STATUS_HEADER = ""
 THEME_ENABLED = "True"
 BOT_THEME = "minimal"
 IMG_PAGE = "1"
-IMG_SEARCH = "anime cat cow horse ai king one-punch-man god of war"
+IMG_SEARCH = "anime batman"
 # Torrent Search
 SEARCH_API_LINK = "https://0f0a9e1b-ad6b-4ba9-956a-bee323173c94-00-1vk3c5knflbpu.sisko.replit.dev/api/{keyword}/{query}/{page(optional)}"
 SEARCH_LIMIT = "0"
